fix modal overflow cutoff issue

--- a/web/assets/picluster-iframe.css
+++ b/web/assets/picluster-iframe.css
@@ -86,7 +86,7 @@ table tbody tr td label {
   top: 0;
   height: 100%;
   width: 100%;
-  overflow: visible;
+  overflow: scroll;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
 }
@@ -99,8 +99,6 @@ table tbody tr td label {
   padding: 0;
   border: 1px solid #888;
   width: 75%;
-  min-height: 75%;
-  height: 100%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
